# data-engineering-zoomcamp-2026-homework

./: .gitignore  README.md
01-docker-terraform/: README.md
01-docker-terraform/pipeline/: Dockerfile  docker-compose.yaml  ingest_green_data.py
02-workflow-orchestration/: README.md
03-data-warehouse/: .gitignore  README.md  load_yellow_taxi_data.py
04-analytics-engineering/: README.md  load_taxi_data.py
04-analytics-engineering/taxi_rides_ny/: ingest_fhv_data.py
04-analytics-engineering/taxi_rides_ny/models/staging/: question3.sql  question4.sql  question5.sql  question6.sql  sources.yml  stg_fhv_tripdata.sql
05-data-platforms/: README.md
05-data-platforms/bruin/my-taxi-pipeline/pipeline/: pipeline.yml
06-batch-processing/: README.md
06-batch-processing/pipeline/: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh
06-batch-processing/pipeline/code/: download_data.sh
06-batch-processing/pipeline/notebooks/: 04_pyspark.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  07_groupby_join.ipynb  09_spark_gcs.ipynb  homework.ipynb  test.ipynb
07-streaming/: README.md
07-streaming/workshop/: pyproject.toml
07-streaming/workshop/live/notebooks/: producer.ipynb
07-streaming/workshop/notebooks/: consumer_db.ipynb  models.py
07-streaming/workshop/src/consumers/: consumer-green.py
07-streaming/workshop/src/job/: aggregation_pickup_job.py  aggregation_streak_job.py  aggregation_tip_job.py  pass_through_job.py
workshop-dlt/: README.md
workshop-dlt/my-dlt-pipeline/: pyproject.toml  taxi_analysis.py  taxi_pipeline.py
(+5 files in other folders)
