[project]
name = "my-dlt-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb,workspace]>=1.22.1",
    "marimo>=0.20.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polars[pyarrow]>=1.38.1",
    "pyarrow>=23.0.1",
]
